--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,6 +23,7 @@ jobs:
         - name: Build tool
           run: |
             python3 -m pip install pyinstaller
+            python3 -m pip install -r requirements.txt
             pyinstaller -F __main__.py
             move dist/__main__.exe hawkeye.exe
         
