--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,8 @@ on:
 jobs:
     windows:
         runs-on: windows-latest
+        permissions:
+          contents: write
         steps:
         - name: Download code
           uses: actions/checkout@v3
