--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,13 @@
-name: Release CI
+name: Release Build CI
 
 on:
+  push:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
     windows:
         runs-on: windows-latest
-        permissions:
-          contents: write
         steps:
         - name: Download code
           uses: actions/checkout@v3
@@ -20,18 +20,15 @@ jobs:
         - name: Patch script with webhook URL
           run: python3 .github/workflows/webhook_patcher.py __main__.py hawkeye_placeholder_webhook ${{ secrets.HAWKEYE_WEBHOOK_URL }}
 
-        - name: Build tool and export release body
+        - name: Build tool
           run: |
             python3 -m pip install pyinstaller
             python3 -m pip install -r requirements.txt
             pyinstaller -F __main__.py
             move dist/__main__.exe hawkeye.exe
-            python3 .github/workflows/release_body.py hawkeye.exe __main__.py
-
-        - name: Release the build
-          uses: ncipollo/release-action@v1
+        
+        - name: Upload as artifact
+          uses: actions/upload-artifact@v3
           with:
-            artifacts: "hawkeye.exe"
-            bodyFile: "body.md"
-            tag: $env:RELEASE_VERSION
-            commit: main
+            name: build_windows
+            path: hawkeye.exe
