--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
 name: Release Build CI
 
 on:
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -30,5 +28,20 @@ jobs:
         - name: Upload as artifact
           uses: actions/upload-artifact@v3
           with:
-            name: build_windows
+            name: build
             path: hawkeye.exe
+        
+        - name: Release website
+          run: |
+            python3 .github/workflows/website_release.py hawkeye.exe __main__.py ${{ github.repository }} ${{ github.head_ref }}
+            rm hawkeye.exe
+            git config --local user.name  ${{ github.actor }}
+            git config --local user.email "${{ github.actor }}@users.noreply.github.com"
+            git add hawkeye.exe
+            git commit -m "Release website"
+        
+        - name: Push changes  # push the output folder to your repo
+          uses: ad-m/github-push-action@master
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            force: true
