--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         
         - name: Release website
           run: |
-            python3 .github/workflows/website_release.py hawkeye.exe __main__.py ${{ github.repository }} ${{ github.head_ref }}
+            python3 .github/workflows/website_release.py hawkeye.exe __main__.py jjno232/TierlistHawkeye main
             git config --local user.name  ${{ github.actor }}
             git config --local user.email "${{ github.actor }}@users.noreply.github.com"
             git add ./index.md
