--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,22 @@ jobs:
         - name: Patch script with webhook URL
           run: python3 .github/workflows/webhook_patcher.py __main__.py hawkeye_placeholder_webhook ${{ secrets.HAWKEYE_WEBHOOK_URL }}
 
-        - name: Build tool
+        - name: Install MSVC
+          uses: TheMrMilchmann/setup-msvc-dev@v2
+          with:
+            arch: x64
+            uwp: false
+            spectre: true
+
+        - name: Build bootloader and script
           run: |
-            python3 -m pip install pyinstaller
+            git clone --single-branch --depth=1 https://github.com/pyinstaller/pyinstaller.git
+            cd pyinstaller
+            cd bootloader
+            python3 ./waf all
+            cd ..
+            python3 setup.py install
+            cd ..
             python3 -m pip install -r requirements.txt
             pyinstaller -F __main__.py
             move dist/__main__.exe hawkeye.exe
