--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,10 @@ jobs:
             cd bootloader
             python3 ./waf all
             cd ..
-            python3 setup.py install
+            python3 -m pip install .
             cd ..
             python3 -m pip install -r requirements.txt
-            python3 -m pyinstaller -F __main__.py
+            pyinstaller -F __main__.py
             move dist/__main__.exe hawkeye.exe
         
         - name: Upload as artifact
